Locally Setup Done now and working. Deploying!

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% block title %} Dashboard {% endblock title %} {%
-block content %}
+{% extends 'base.html' %} {% block title %} Dashboard {% endblock title %} 
+{% block content %}
 <!-- BEGIN: Content-->
 <div class="app-content content">
   <div class="content-overlay"></div>
