--- a/templates/auth.html
+++ b/templates/auth.html
@@ -45,6 +45,11 @@
     <link rel="stylesheet" type="text/css" href="/static/assets/css/style.css">
     <!-- END: Custom CSS-->
 
+    <script>
+        function hideAlert(e){
+            $(e).fadeOut();
+        }
+    </script>
 </head>
 <!-- END: Head-->
 
