--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,4 +1,52 @@
-{% extends 'base.html' %} {% block title %} Dashboard {% endblock title %} 
+{% extends 'base.html' %} 
+{% block title %} Dashboard {% endblock title %} 
+  
+
+{% block pageCSS %}
+    <script>
+      let encode_line_graph_data = {{encode_stats_line}}
+      let decode_line_graph_data = {{decode_stats_line}}
+      
+    </script>
+{% endblock pageCSS %}
+  
+
+{% block pageJS %}
+  <script>
+    let total_coding = {{total_coding}}
+    let total_encode = {{total_encodes}}
+    let total_decode = {{total_decodes}}
+    
+    var SI_SYMBOL = ["", "k", "M", "G", "T", "P", "E"];
+
+    function abbreviateNumber(number){
+
+        // what tier? (determines SI symbol)
+        var tier = Math.log10(Math.abs(number)) / 3 | 0;
+
+        // if zero, we don't need a suffix
+        if(tier == 0) return number;
+
+        // get suffix and determine scale
+        var suffix = SI_SYMBOL[tier];
+        var scale = Math.pow(10, tier * 3);
+
+        // scale the number
+        var scaled = number / scale;
+
+        // format number and add suffix
+        return scaled.toFixed(1) + suffix;
+    }
+
+    $(document).ready(function(){
+      $("#total_coding").text(abbreviateNumber(total_coding))
+      $("#total_encoding").text(abbreviateNumber(total_encode))
+      $("#total_decoding").text(abbreviateNumber(total_decode))
+      
+    })
+  </script>
+{% endblock pageJS %}
+  
 {% block content %}
 <!-- BEGIN: Content-->
 <div class="app-content content">
@@ -14,19 +62,19 @@
           <div class="col-xl-4 col-md-6 col-12">
             <div class="card card-congratulation-medal">
               <div class="card-body">
-                <h5>Congratulations 🎉 John!</h5>
-                <p class="card-text font-small-3">You have won gold medal</p>
-                <h3 class="mb-75 mt-2 pt-50">
-                  <a href="javascript:void(0);">48.9k</a>
+                <h5>Congratulations 🎉 {{ user.full_name }}!</h5>
+                <p class="card-text font-small-3">You have made a great start in coding!</p>
+                <h3 class="mb-75 mt-1 pt-50">
+                  <a href="javascript:void(0);" id="total_coding"></a> Files Coded
                 </h3>
-                <button type="button" class="btn btn-primary">
+                <a href="{% url 'app.encode.list' %}" type="button" class="btn btn-primary">
                   View Encoded Files
-                </button>
-                <img
-                  src="static/app-assets/images/illustration/badge.svg"
+                </a>
+                <!-- <img
+                  src="/static/app-assets/images/illustration/badge.svg"
                   class="congratulation-medal"
                   alt="Medal Pic"
-                />
+                /> -->
               </div>
             </div>
           </div>
@@ -99,8 +147,8 @@
                 <div class="card">
                   <div class="card-body pb-50">
                     <h6>Encoded Files</h6>
-                    <h2 class="font-weight-bolder mb-1">276k</h2>
-                    <div id="statistics-order-chart"></div>
+                    <h2 class="font-weight-bolder mb-1" id="total_encoding"></h2>
+                    <div id="statistics-encoded-files-chart"></div>
                   </div>
                 </div>
               </div>
@@ -111,8 +159,8 @@
                 <div class="card card-tiny-line-stats">
                   <div class="card-body pb-50">
                     <h6>Decode Files</h6>
-                    <h2 class="font-weight-bolder mb-1">624k</h2>
-                    <div id="statistics-profit-chart"></div>
+                    <h2 class="font-weight-bolder mb-1" id="total_decoding"></h2>
+                    <div id="statistics-decoded-files-chart"></div>
                   </div>
                 </div>
               </div>
@@ -124,16 +172,16 @@
                   <div class="card-body">
                     <div class="row">
                       <div class="col-6">
-                        <h4 class="card-title mb-1">Files Encoded</h4>
+                        <h4 class="card-title mb-1">Files Coded</h4>
                         <div class="font-small-2">This Month</div>
-                        <h5 class="mb-1">4055k</h5>
-                        <p class="card-text text-muted font-small-2">
+                        <h5 class="mb-1" id="total_files_month">4055k</h5>
+                        <!-- <p class="card-text text-muted font-small-2">
                           <span class="font-weight-bolder">68.2%</span
                           ><span> more encoding than last month.</span>
-                        </p>
+                        </p> -->
                       </div>
                       <div class="col-6">
-                        <div id="earnings-chart"></div>
+                        <div id="coding-percentage-chart"></div>
                       </div>
                     </div>
                   </div>
@@ -243,7 +291,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -298,7 +346,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -353,7 +401,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -408,7 +456,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -463,7 +511,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -518,7 +566,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -573,7 +621,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -628,7 +676,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -683,7 +731,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -738,7 +786,7 @@
                             <div class="avatar rounded">
                               <div class="avatar-content">
                                 <img
-                                  src="static/app-assets/images/icons/toolbox.svg"
+                                  src="/static/app-assets/images/icons/toolbox.svg"
                                   alt="Toolbar svg"
                                 />
                               </div>
@@ -812,7 +860,7 @@
                 <div class="browser-states">
                   <div class="media">
                     <img
-                      src="static/app-assets/images/icons/google-chrome.png"
+                      src="/static/app-assets/images/icons/google-chrome.png"
                       class="rounded mr-1"
                       height="30"
                       alt="Google Chrome"
@@ -829,7 +877,7 @@
                 <div class="browser-states">
                   <div class="media">
                     <img
-                      src="static/app-assets/images/icons/mozila-firefox.png"
+                      src="/static/app-assets/images/icons/mozila-firefox.png"
                       class="rounded mr-1"
                       height="30"
                       alt="Mozila Firefox"
@@ -846,7 +894,7 @@
                 <div class="browser-states">
                   <div class="media">
                     <img
-                      src="static/app-assets/images/icons/apple-safari.png"
+                      src="/static/app-assets/images/icons/apple-safari.png"
                       class="rounded mr-1"
                       height="30"
                       alt="Apple Safari"
@@ -863,7 +911,7 @@
                 <div class="browser-states">
                   <div class="media">
                     <img
-                      src="static/app-assets/images/icons/internet-explorer.png"
+                      src="/static/app-assets/images/icons/internet-explorer.png"
                       class="rounded mr-1"
                       height="30"
                       alt="Internet Explorer"
@@ -880,7 +928,7 @@
                 <div class="browser-states">
                   <div class="media">
                     <img
-                      src="static/app-assets/images/icons/opera.png"
+                      src="/static/app-assets/images/icons/opera.png"
                       class="rounded mr-1"
                       height="30"
                       alt="Opera Mini"
