--- a/templates/layouts/header.html
+++ b/templates/layouts/header.html
@@ -1,36 +1,60 @@
-
-    <!-- BEGIN: Header-->
-    <nav class="header-navbar navbar navbar-expand-lg align-items-center floating-nav navbar-light navbar-shadow">
-        <div class="navbar-container d-flex content">
-            <div class="bookmark-wrapper d-flex align-items-center">
-                <ul class="nav navbar-nav d-xl-none">
-                    <li class="nav-item"><a class="nav-link menu-toggle" href="javascript:void(0);"><i class="ficon" data-feather="menu"></i></a></li>
-                </ul>
-                <ul class="nav navbar-nav bookmark-icons">
-                    <li class="nav-item d-none d-lg-block"><a class="nav-link" href="app-email.html" data-toggle="tooltip" data-placement="top" title="Encode"><i class="ficon" data-feather="shield"></i></a></li>
-                    <li class="nav-item d-none d-lg-block"><a class="nav-link" href="app-chat.html" data-toggle="tooltip" data-placement="top" title="Decode"><i class="ficon" data-feather="shield-off"></i></a></li>
-                </ul>
-            </div>
-            <ul class="nav navbar-nav align-items-center ml-auto">
-                
-                <li class="nav-item dropdown dropdown-user"><a class="nav-link dropdown-toggle dropdown-user-link"
-                    id="dropdown-user" href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    <div class="user-nav d-sm-flex d-none"><span class="user-name font-weight-bolder">John
-                            Doe</span><span class="user-status">Admin</span></div><span class="avatar"><img
-                            class="round" src="/static/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar"
-                            height="40" width="40"><span class="avatar-status-online"></span></span>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-user"><a
-                        class="dropdown-item" href="page-profile.html"><i class="mr-50" data-feather="user"></i>
-                        Profile</a>
-                    <div class="dropdown-divider"></div><a
-                        class="dropdown-item" href="page-auth-login-v1.html"><i class="mr-50"
-                            data-feather="power"></i> Logout</a>
-                </div>
-            </li>
+<!-- BEGIN: Header-->
+<nav class="header-navbar navbar navbar-expand-lg align-items-center floating-nav navbar-light navbar-shadow">
+    <div class="navbar-container d-flex content">
+        <div class="bookmark-wrapper d-flex align-items-center">
+            <ul class="nav navbar-nav d-xl-none">
+                <li class="nav-item"><a class="nav-link menu-toggle" href="javascript:void(0);"><i class="ficon"
+                            data-feather="menu"></i></a></li>
+            </ul>
+            <ul class="nav navbar-nav bookmark-icons">
+                <li class="nav-item d-none d-lg-block"><a class="nav-link" href="{% url 'app.encode' %}"
+                        data-toggle="tooltip" data-placement="top" title="Encode"><i class="ficon"
+                            data-feather="shield"></i></a></li>
+                            <li class="nav-item d-none d-lg-block"><a class="nav-link" href="{% url 'app.encode.list' %}"
+                                data-toggle="tooltip" data-placement="top" title="Encoded List"><i class="ficon"
+                                    data-feather="list"></i></a></li>
+                <li class="nav-item d-none d-lg-block"><a class="nav-link" href="{% url 'app.decode' %}"
+                        data-toggle="tooltip" data-placement="top" title="Decode"><i class="ficon"
+                            data-feather="shield-off"></i></a></li>
             </ul>
         </div>
-    </nav>
-    <!-- END: Header-->
-    
+        <ul class="nav navbar-nav align-items-center ml-auto">
+
+            <li class="nav-item dropdown dropdown-user"><a class="nav-link dropdown-toggle dropdown-user-link"
+                    id="dropdown-user" href="javascript:void(0);" data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
+                    <div class="user-nav d-sm-flex d-none">
+                        <span class="user-name font-weight-bolder m-0">{{ user.full_name }}</span>
+                        <!-- <span class="user-status">Admin</span> -->
+                    </div>
+                    
+                        
+                            <span class="avatar">
+                                    <img
+                                    class="round" src="/media/{% firstof user.profile_image user.profile_image 'uploads/user_placeholder.jpg' %}" alt="avatar"
+                                    height="40" width="40">
+                                    <!-- <span class="avatar-status-online"></span> -->
+                            </span>
+                            
+                            
+                        
+                        
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-user">
+                    <a class="dropdown-item" href="{% url 'auth.profile' %}">
+                        <i class="mr-50" data-feather="user"></i>
+                        Profile
+                    </a>
+                    <div class="dropdown-divider"></div>
+                    <form action="{% url 'auth.logout' %}" method="post">
+                        {% csrf_token %}
+                        <button class="dropdown-item w-100">
+                            <i class="mr-50" data-feather="power"></i> Logout
+                        </button>
+                    </form>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!-- END: Header-->
