--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -11,16 +11,18 @@
     <div class="shadow-bottom"></div>
     <div class="main-menu-content">
         <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-            <li class="nav-item active"></li>
+            <li class="nav-item active">
                 <a class="d-flex align-items-center" href="{% url 'app.dashboard' %}"><i data-feather="home"></i><span class="menu-title text-truncate" data-i18n="Dashboards">Dashboards</span>
                     </a>
                 
             </li>
             <li class=" navigation-header"><span data-i18n="Apps &amp; Pages">Tools</span><i data-feather="more-horizontal"></i>
             </li>
-            <li class=" nav-item"><a class="d-flex align-items-center" href=""><i data-feather="shield"></i><span class="menu-title text-truncate" data-i18n="Encode">Encode</span></a>
+            <li class=" nav-item"><a class="d-flex align-items-center" href="{% url 'app.encode' %}"><i data-feather="shield"></i><span class="menu-title text-truncate" data-i18n="Encode">Encode</span></a>
             </li>
-            <li class=" nav-item"><a class="d-flex align-items-center" href=""><i data-feather="shield-off"></i><span class="menu-title text-truncate" data-i18n="Email">Decode</span></a>
+            <li class=" nav-item"><a class="d-flex align-items-center" href="{% url 'app.encode.list' %}"><i data-feather="list"></i><span class="menu-title text-truncate" data-i18n="Encoded List">Encoded List</span></a>
+            </li>
+            <li class=" nav-item"><a class="d-flex align-items-center" href="{% url 'app.decode' %}"><i data-feather="shield-off"></i><span class="menu-title text-truncate" data-i18n="Email">Decode</span></a>
             </li>
             
         </ul>
