--- a/templates/login.html
+++ b/templates/login.html
@@ -37,10 +37,19 @@
                                     <p class="card-text mb-2">Please sign-in to your account and start the adventure</p>
     
                                     <form class="auth-login-form mt-2" action="{% url 'auth.login' %}" method="POST">
+                                           
+                                    {% for field, errors in form.errors.items %}
+                                    {% for error in errors %}
+                                    <div class="alert alert-danger" onclick="hideAlert(this)" role="alert">
+                                        <div class="alert-body">{{ error }}</div>
+                                    </div>
+                                    {% endfor %}
+                                    {% endfor %}
+                                        
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <label for="login-email" class="form-label">Email</label>
-                                            <input type="text" class="form-control" id="login-email" name="login-email" placeholder="john@example.com" aria-describedby="login-email" tabindex="1" autofocus />
+                                            <input type="text" class="form-control" id="login-email" name="username" value="{% firstof form.username.value form.username.value '' %}" placeholder="john@example.com" aria-describedby="login-email" tabindex="1" autofocus />
                                         </div>
     
                                         <div class="form-group">
@@ -51,7 +60,7 @@
                                                 </a>
                                             </div>
                                             <div class="input-group input-group-merge form-password-toggle">
-                                                <input type="password" class="form-control form-control-merge" id="login-password" name="login-password" tabindex="2" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="login-password" />
+                                                <input type="password" class="form-control" id="login-password" name="password" tabindex="2" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="login-password" />
                                                 <div class="input-group-append">
                                                     <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
                                                 </div>
@@ -59,7 +68,7 @@
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox">
-                                                <input class="custom-control-input" type="checkbox" id="remember-me" tabindex="3" />
+                                                <input class="custom-control-input" name="remember_me" type="checkbox" id="remember-me" tabindex="3" />
                                                 <label class="custom-control-label" for="remember-me"> Remember Me </label>
                                             </div>
                                         </div>
