--- a/templates/encode.html
+++ b/templates/encode.html
@@ -73,6 +73,12 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="content-header-right text-md-right col-md-3 col-12 d-md-block d-none">
+               <div class="form-group breadcrumb-right">
+                    <a type="button" href="{% url 'app.encode.list' %}" class="btn btn-primary waves-effect waves-float waves-light">Encoded List</a>
+            </div> 
+            </div>
         </div>
         <div class="content-body">
             <section id="basic-input">
