--- a/templates/encodeList.html
+++ b/templates/encodeList.html
@@ -83,9 +83,9 @@
                             <p class="card-text item-description">
                                 {{file.created_at}}
                             </p>
-                            <div class="item-name">
-                                <a href="javascript:void(0)" class="cursor-pointer">Format: <span class="user-select-all">{{file.encoded_image.format}}</span></a>
-                            </div>
+                            <!-- <div class="item-name">
+                                <a href="javascript:void(0)" class="cursor-pointer">Format: <span class="user-select-all">{{file.encoded_image.extension}}</span></a>
+                            </div> -->
                             <div class="item-name">
                                 <a href="javascript:void(0)" class="cursor-pointer">Algorithm: <span class="user-select-all">{{file.algorithm}}</span></a>
                             </div>
