--- a/templates/resetPassword.html
+++ b/templates/resetPassword.html
@@ -41,14 +41,21 @@
                                 <h4 class="card-title mb-1">Reset Password 🔒</h4>
                                 <p class="card-text mb-2">Your new password must be different from previously used passwords</p>
 
-                                <form class="auth-reset-password-form mt-2" action="{% url 'auth.login' %}" method="POST">
+                                <form class="auth-reset-password-form mt-2" action="" method="POST">
                                     {% csrf_token %}
+                                    {% for field, errors in form.errors.items %}
+                                                    {% for error in errors %}
+                                                    <div class="alert alert-danger alert-dismissible fade show cursor-pointer"  onclick="hideAlert(this)" role="alert">
+                                                        <div class="alert-body">{{ error }}</div>
+                                                    </div>
+                                                    {% endfor %}
+                                                    {% endfor %}
                                     <div class="form-group">
                                         <div class="d-flex justify-content-between">
                                             <label for="reset-password-new">New Password</label>
                                         </div>
                                         <div class="input-group input-group-merge form-password-toggle">
-                                            <input type="password" class="form-control form-control-merge" id="reset-password-new" name="reset-password-new" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="reset-password-new" tabindex="1" autofocus />
+                                            <input type="password" class="form-control form-control-merge" id="reset-password-new" name="new_password1" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="reset-password-new" tabindex="1" autofocus />
                                             <div class="input-group-append">
                                                 <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
                                             </div>
@@ -59,7 +66,7 @@
                                             <label for="reset-password-confirm">Confirm Password</label>
                                         </div>
                                         <div class="input-group input-group-merge form-password-toggle">
-                                            <input type="password" class="form-control form-control-merge" id="reset-password-confirm" name="reset-password-confirm" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="reset-password-confirm" tabindex="2" />
+                                            <input type="password" class="form-control form-control-merge" id="reset-password-confirm" name="new_password2" placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;" aria-describedby="reset-password-confirm" tabindex="2" />
                                             <div class="input-group-append">
                                                 <span class="input-group-text cursor-pointer"><i data-feather="eye"></i></span>
                                             </div>
