--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
     <header>
       <nav>
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="encode.html">Encode</a></li>
-          <li><a href="decode.html">Decode</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="{% url 'app.encode' %}">Encode</a></li>
+          <li><a href="{% url 'app.decode' %}">Decode</a></li>
         </ul>
       </nav>
     </header>
@@ -38,8 +38,14 @@
           <img src="/static/assets/images/SpreadSpectrum.png" alt="Background Image" />
           <div class="overlay"></div>
           <div class="login-button">
+            
+            {% if user %}
+            <a href="{% url 'app.dashboard' %}">Dashboard</a>
+            {% else %}
+              
             <a href="{% url 'auth.login' %}">Login</a>
             <a href="{% url 'auth.register' %}">Sign Up</a>
+            {% endif %}
           </div>
         </div>
       </section>
