--- a/templates/encodeList.html
+++ b/templates/encodeList.html
@@ -6,6 +6,7 @@
     <!-- Page CSS -->
     <link rel="stylesheet" type="text/css" href="/static/app-assets/css/pages/app-ecommerce.css">
 
+
     <link rel="stylesheet" type="text/css" href="/static/app-assets/css/plugins/forms/form-validation.css">
     <style>
         #wishlist * .img-fluid{
@@ -14,6 +15,7 @@
             object-fit: contain;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.11/dist/clipboard.min.js"></script>
 {% endblock pageCSS %}
     
 {% block pageJS %}
