--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -11,4 +11,4 @@
 <p>If you did not request a password reset, please ignore this email.</p>
 
 <p>Thank you,</p>
-<p>The {{ site_name }} Team</p>
+<p>The {{ BY }} Team</p>
