--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,8 @@
     <!-- END: Page CSS-->
 {% endblock pageCSS %}
     
+{% load socialaccount %}
 
-    
 {% block content %}
         <!-- BEGIN: Content-->
         <div class="app-content content ">
@@ -85,15 +85,12 @@
                                     <div class="divider my-2">
                                         <div class="divider-text">or</div>
                                     </div>
-    
-                                    <div class="auth-footer-btn d-flex justify-content-center">
-                                        <a href="javascript:void(0)" class="btn btn-facebook">
-                                            <i data-feather="facebook"></i>
-                                        </a>
-                                        <a href="javascript:void(0)" class="btn btn-google">
-                                            <i data-feather="mail"></i>
-                                        </a>
-                                    </div>
+                                    <form action="{% provider_login_url 'google' %}?next=/dashboard" method="post">
+                                        {% csrf_token %}
+                                        <button type="submit" class="btn btn-dark w-100 font-weight-bold">
+                                            Sign In with Google <img src="/static/assets/images/google.ico" class="ml-1" width="32" height="32" >
+                                    </button>
+                                    </form>
                                 </div>
                             </div>
                             <!-- /Login v1 -->
